--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "cSpell.words": [
+        "cicle",
+        "datetime",
         "extralight",
+        "hotspot",
         "PAPAFAM",
         "Thirdweb"
     ]
