--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@sanity/image-url": "^1.0.2",
     "@thirdweb-dev/react": "^3.8.2",
     "@thirdweb-dev/sdk": "^3.8.2",
     "ethers": "^5.7.2",
     "next": "latest",
+    "next-sanity": "^4.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
