--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.4.0",
     "@thirdweb-dev/react": "^3.8.2",
     "@thirdweb-dev/sdk": "^3.8.2",
     "ethers": "^5.7.2",
